# car_cluster_v2

./: CMakeLists.txt  Main.qml  README.md  main.cpp  resources.qrc
data/: CarClusterData.qml  qmldir
qml/: ControlPanel.qml  FuelDial.qml  MainMenu.qml  RMPDial.qml  SpeedDial.qml  TCPHandler.qml  TemperatureDial.qml
src/: CMakeLists.txt
src/TcpClient/: tcpclientreceive.cpp  tcpclientreceive.h
